# Logicon

./: .gitignore  CMakeLists.txt  CreateDist.cmake  README.md  data.cpp  data.h
dependencies/: CMakeLists.txt  README.md  dependencies_history.txt  setup_dependencies.sh
dependencies/devil/DevIL/src-ILU/: CMakeLists.txt
dependencies/devil/DevIL/src-ILUT/: CMakeLists.txt
dependencies/gl3w/cmake/: gl3w-targets.cmake
dependencies/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
dependencies/imgui/addons/imguifilesystem/: imguifilesystem.h
dependencies/imgui_impl_glfw_gl3/: imgui_impl_glfw_gl3.cpp
include/: CMakeLists.txt  app.h  assetLoader.h  circuit.h  circuitParser.h  data.h  engine.h  fileController.h  graphics.h  logger.h  types.h
include/exceptions/: idNotFoundException.h  logiconException.h  otherException.h  wrongPortException.h
include/gates/: and.h  clock.h  delay.h  gate.h  input.h  nand.h  nor.h  not.h  or.h  switch.h  xnor.h  xor.h
include/gui/: blocks_widget.h  canvas_widget.h  footer_widget.h  gBlock.h  gCircuit.h  gHelpers.h  gPort.h  gUtils.h  iGCircuit.h  menu_widget.h
include/widgets/: blocks_widget.h  footer_widget.h  menu_widget.h  widget_commons.h
src/: CMakeLists.txt  app.cpp  assetLoader.cpp  circuit.cpp  circuitParser.cpp  circuitParser.h  data.cpp  engine.cpp  fileController.cpp  graphics.cpp  logger.cpp  main.cpp
src/exceptions/: idNotFoundException.cpp  logiconException.cpp  wrongPortException.cpp
src/gates/: and.cpp  and.h  circuit.cpp  circuit.h  clock.cpp  clock.h  delay.cpp  delay.h  gate.cpp  input.cpp  input.h  nand.cpp  nor.cpp  not.cpp  or.cpp  switch.cpp  switch.h  xnor.cpp  xor.cpp
src/gui/: blocks_widget.cpp  canvas_widget.cpp  footer_widget.cpp  gBlock.cpp  gCircuit.cpp  gHelpers.cpp  gPort.cpp  menu_widget.cpp
src/widgets/: blocks_widget.cpp  footer_widget.cpp  gHelpers.cpp  menu_widget.cpp
